src/objects/ints__EfxReport_Trade__c.object
<CustomObject>
    <fields>
        <fullName>ints__AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__BalanceAmount__c</fullName>
        <label>BalanceAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateLastActivityOrPayment__c</fullName>
        <label>DateLastActivityOrPayment</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateOpened__c</fullName>
        <label>DateOpened</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Trades</relationshipLabel>
        <relationshipName>EfxReport_Trades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__HighCreditAmount__c</fullName>
        <label>HighCreditAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__MonthsReviewed__c</fullName>
        <label>MonthsReviewed</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__PastDueAmount__c</fullName>
        <label>PastDueAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__PaymentRate_Code__c</fullName>
        <label>PaymentRate Code</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__PaymentRate_Description__c</fullName>
        <label>PaymentRate Description</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__PaymentTermAmount__c</fullName>
        <label>PaymentTermAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Portfolio_Code__c</fullName>
        <label>Portfolio Code</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Portfolio_Description__c</fullName>
        <label>Portfolio Description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Trade</label>
    <nameField>
        <displayFormat>EFX-TRADE-{0000000000}</displayFormat>
        <label>EfxReport Trade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Trades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>